reworked ajax call, added more services

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -47,17 +47,17 @@
                                 </a>
                             </div>
                             <div class="col-md-3">
-                                <a id="ownCloud_quicklink" href="#">
-                                    <img src="https://img.icons8.com/fluency/240/000000/cloud-backup-restore.png"
-                                    alt="Owncloud" class="img-responsive">
-                                    <p class="text-center" >Backup</p>
-                                </a>
-                            </div>
-                            <div class="col-md-3">
                                 <a id="Photos_quicklink" href="#">
                                     <img src="https://img.icons8.com/fluency/240/000000/photos.png"
                                     alt="Photos" class="img-responsive">
                                     <p class="text-center" >Photos</p>
+                                </a>
+                            </div>
+                            <div class="col-md-3">
+                                <a id="ownCloud_quicklink" href="#">
+                                    <img src="https://img.icons8.com/fluency/240/000000/cloud-backup-restore.png"
+                                    alt="Owncloud" class="img-responsive">
+                                    <p class="text-center" >Backup</p>
                                 </a>
                             </div>
                         </div>
@@ -87,6 +87,8 @@
                                             <tr>
                                                 <th>Service</th>
                                                 <th>Description</th>
+                                                <th>Path</th>
+                                                <th>Proxy of</th>
                                                 <th>Status</th>
                                             </tr>
                                         </thead>
@@ -95,25 +97,33 @@
                                             <tr>
                                                 <!-- O!MPD -->
                                                 <td><a id="OMPD_link" href="#" class="label label-default">loading</a></td>
-                                                <td>Music Player Daemon</td>
+                                                <td>Music Player</td>
+                                                <td id="OMPD_path" >loading</td>
+                                                <td id="OMPD_proxy" >loading</td>
                                                 <td><span id="OMPD" class="label label-warning">Waiting</span></td>  
                                             </tr>
                                             <tr>
                                                 <!-- Ubooquity -->
                                                 <td><a id="Ubooquity_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Book Shelf</td>
+                                                <td id="Ubooquity_path" >loading</td>
+                                                <td id="Ubooquity_proxy" >loading</td>
                                                 <td><span id="Ubooquity" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- ownCloud -->
                                                 <td><a id="ownCloud_link" href="#" class="label label-default">loading</a></td>
-                                                <td>Cloud Storage</td> 
+                                                <td>Cloud Storage</td>
+                                                <td id="ownCloud_path" >loading</td>
+                                                <td id="ownCloud_proxy" >loading</td>
                                                 <td><span id="ownCloud" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- Wordpress -->
                                                 <td><a id="Wordpress_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Portfolio Site</td>
+                                                <td id="Wordpress_path" >loading</td>
+                                                <td id="Wordpress_proxy" >loading</td>
                                                 <td><span id="Wordpress" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             
@@ -144,6 +154,8 @@
                                             <tr>
                                                 <th>Service</th>
                                                 <th>Description</th>
+                                                <th>Path</th>
+                                                <th>Proxy of</th>
                                                 <th>Status</th>
                                             </tr>
                                         </thead>
@@ -153,49 +165,73 @@
                                                 <!-- Dashboard -->
                                                 <td><a id="Dashboard_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Server Dashboard</td>
+                                                <td id="Dashboard_path" >loading</td>
+                                                <td id="Dashboard_proxy" >loading</td>
                                                 <td><span id="Dashboard" class="label label-warning">Waiting</span></td>  
                                             </tr>
                                             <tr>
                                                 <!-- Pi-Hole -->
                                                 <td><a id="Pi-Hole_link" href="#" class="label label-default">loading</a></td>
                                                 <td>DNS Server</td>
+                                                <td id="Pi-Hole_path" >loading</td>
+                                                <td id="Pi-Hole_proxy" >loading</td>
                                                 <td><span id="Pi-Hole" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- Wordpress Admin -->
                                                 <td><a id="Wordpress-Admin_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Wordpress Admin</td>
+                                                <td id="Wordpress-Admin_path" >loading</td>
+                                                <td id="Wordpress-Admin_proxy" >loading</td>
                                                 <td><span id="Wordpress-Admin" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- Ubooquity Admin -->
                                                 <td><a id="Ubooquity-Admin_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Books Library Admin</td>
+                                                <td id="Ubooquity-Admin_path" >loading</td>
+                                                <td id="Ubooquity-Admin_proxy" >loading</td>
                                                 <td><span id="Ubooquity-Admin" class="label label-warning">Waiting</span></td>
                                             </tr>
-                                            <tr>
-                                                <!-- Bitwarden -->
+                                            <!-- <tr>
+                                                Bitwarden
                                                 <td><a id="Bitwarden_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Password Manager</td>
+                                                <td id="Bitwarden_path" >loading</td>
+                                                <td id="Bitwarden_proxy" >loading</td>
                                                 <td><span id="Bitwarden" class="label label-warning">Waiting</span></td>
-                                            </tr>
+                                            </tr> -->
                                             <tr>
                                                 <!-- Lidarr -->
                                                 <td><a id="Lidarr_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Music Library</td>
+                                                <td id="Lidarr_path" >loading</td>
+                                                <td id="Lidarr_proxy" >loading</td>
                                                 <td><span id="Lidarr" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- Radarr -->
                                                 <td><a id="Readarr_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Book Library</td>
+                                                <td id="Readarr_path" >loading</td>
+                                                <td id="Readarr_proxy" >loading</td>
                                                 <td><span id="Readarr" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- Jackett -->
                                                 <td><a id="Jackett_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Torrent Search Indexer</td>
+                                                <td id="Jackett_path" >loading</td>
+                                                <td id="Jackett_proxy" >loading</td>
                                                 <td><span id="Jackett" class="label label-warning">Waiting</span></td>
+                                            </tr>
+                                            <tr>
+                                                <!-- phpMyAdmin -->
+                                                <td><a id="phpMyAdmin_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Database Admin</td>
+                                                <td id="phpMyAdmin_path" >loading</td>
+                                                <td id="phpMyAdmin_proxy" >loading</td>
+                                                <td><span id="phpMyAdmin" class="label label-warning">Waiting</span></td>
                                             </tr>
                                         </tbody>
                                     </table>
