class refactor, dict cont, overall improvemnts

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -99,32 +99,32 @@
                                                 <td><a id="OMPD_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Music Player</td>
                                                 <td id="OMPD_path" >loading</td>
-                                                <td id="OMPD_proxy" >loading</td>
-                                                <td><span id="OMPD" class="label label-warning">Waiting</span></td>  
+                                                <td><a id="OMPD_proxy" href="#" >loading</a></td>
+                                                <td><span id="OMPD_status" class="label label-warning">Waiting</span></td>  
                                             </tr>
                                             <tr>
                                                 <!-- Ubooquity -->
                                                 <td><a id="Ubooquity_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Book Shelf</td>
                                                 <td id="Ubooquity_path" >loading</td>
-                                                <td id="Ubooquity_proxy" >loading</td>
-                                                <td><span id="Ubooquity" class="label label-warning">Waiting</span></td>
+                                                <td><a id="Ubooquity_proxy" href="#" >loading</a></td>
+                                                <td><span id="Ubooquity_status" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- ownCloud -->
                                                 <td><a id="ownCloud_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Cloud Storage</td>
                                                 <td id="ownCloud_path" >loading</td>
-                                                <td id="ownCloud_proxy" >loading</td>
-                                                <td><span id="ownCloud" class="label label-warning">Waiting</span></td>
+                                                <td><a id="ownCloud_proxy" href="#" >loading</a></td>
+                                                <td><span id="ownCloud_status" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- Wordpress -->
                                                 <td><a id="Wordpress_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Portfolio Site</td>
                                                 <td id="Wordpress_path" >loading</td>
-                                                <td id="Wordpress_proxy" >loading</td>
-                                                <td><span id="Wordpress" class="label label-warning">Waiting</span></td>
+                                                <td><a id="Wordpress_proxy" href="#" >loading</a></td>
+                                                <td><span id="Wordpress_status" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             
                                         </tbody>
@@ -166,72 +166,72 @@
                                                 <td><a id="Dashboard_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Server Dashboard</td>
                                                 <td id="Dashboard_path" >loading</td>
-                                                <td id="Dashboard_proxy" >loading</td>
-                                                <td><span id="Dashboard" class="label label-warning">Waiting</span></td>  
+                                                <td><a id="Dashboard_proxy" href="#" >loading</a></td>
+                                                <td><span id="Dashboard_status" class="label label-warning">Waiting</span></td>  
                                             </tr>
                                             <tr>
                                                 <!-- Pi-Hole -->
                                                 <td><a id="Pi-Hole_link" href="#" class="label label-default">loading</a></td>
                                                 <td>DNS Server</td>
                                                 <td id="Pi-Hole_path" >loading</td>
-                                                <td id="Pi-Hole_proxy" >loading</td>
-                                                <td><span id="Pi-Hole" class="label label-warning">Waiting</span></td>
+                                                <td><a id="Pi-Hole_proxy" href="#" >loading</a></td>
+                                                <td><span id="Pi-Hole_status" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- Wordpress Admin -->
                                                 <td><a id="Wordpress-Admin_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Wordpress Admin</td>
                                                 <td id="Wordpress-Admin_path" >loading</td>
-                                                <td id="Wordpress-Admin_proxy" >loading</td>
-                                                <td><span id="Wordpress-Admin" class="label label-warning">Waiting</span></td>
+                                                <td><a id="Wordpress-Admin_proxy" href="#" >loading</a></td>
+                                                <td><span id="Wordpress-Admin_status" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- Ubooquity Admin -->
                                                 <td><a id="Ubooquity-Admin_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Books Library Admin</td>
                                                 <td id="Ubooquity-Admin_path" >loading</td>
-                                                <td id="Ubooquity-Admin_proxy" >loading</td>
-                                                <td><span id="Ubooquity-Admin" class="label label-warning">Waiting</span></td>
+                                                <td><a id="Ubooquity-Admin_proxy" href="#" >loading</a></td>
+                                                <td><span id="Ubooquity-Admin_status" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <!-- <tr>
                                                 Bitwarden
                                                 <td><a id="Bitwarden_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Password Manager</td>
                                                 <td id="Bitwarden_path" >loading</td>
-                                                <td id="Bitwarden_proxy" >loading</td>
-                                                <td><span id="Bitwarden" class="label label-warning">Waiting</span></td>
+                                                <td><a id="Bitwarden_proxy" href="#" >loading</a></td>
+                                                <td><span id="Bitwarden_status" class="label label-warning">Waiting</span></td>
                                             </tr> -->
                                             <tr>
                                                 <!-- Lidarr -->
                                                 <td><a id="Lidarr_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Music Library</td>
                                                 <td id="Lidarr_path" >loading</td>
-                                                <td id="Lidarr_proxy" >loading</td>
-                                                <td><span id="Lidarr" class="label label-warning">Waiting</span></td>
+                                                <td><a id="Lidarr_proxy" href="#" >loading</a></td>
+                                                <td><span id="Lidarr_status" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- Radarr -->
                                                 <td><a id="Readarr_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Book Library</td>
                                                 <td id="Readarr_path" >loading</td>
-                                                <td id="Readarr_proxy" >loading</td>
-                                                <td><span id="Readarr" class="label label-warning">Waiting</span></td>
+                                                <td><a id="Readarr_proxy" href="#" >loading</a></td>
+                                                <td><span id="Readarr_status" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- Jackett -->
                                                 <td><a id="Jackett_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Torrent Search Indexer</td>
                                                 <td id="Jackett_path" >loading</td>
-                                                <td id="Jackett_proxy" >loading</td>
-                                                <td><span id="Jackett" class="label label-warning">Waiting</span></td>
+                                                <td><a id="Jackett_proxy" href="#" >loading</a></td>
+                                                <td><span id="Jackett_status" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
                                                 <!-- phpMyAdmin -->
                                                 <td><a id="phpMyAdmin_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Database Admin</td>
                                                 <td id="phpMyAdmin_path" >loading</td>
-                                                <td id="phpMyAdmin_proxy" >loading</td>
-                                                <td><span id="phpMyAdmin" class="label label-warning">Waiting</span></td>
+                                                <td><a id="phpMyAdmin_proxy" href="#" >loading</a></td>
+                                                <td><span id="phpMyAdmin_status" class="label label-warning">Waiting</span></td>
                                             </tr>
                                         </tbody>
                                     </table>
