--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -33,30 +33,25 @@
                         <div class="row">
                             <div class="col-md-3">
                                 <a id="OMPD_quicklink" href="#">
-                                    <i class="fa-brands fa-wordpress-simple"></i>
-                                    <img src="https://img.icons8.com/fluency/240/000000/music-library.png"
-                                    alt="OMPD" class="img-responsive">
+                                    <img src="./img/music.png" alt="OMPD" class="img-responsive">
                                     <p class="text-center" >Music</p>
                                 </a>
                             </div>
                             <div class="col-md-3">
                                 <a id="Ubooquity_quicklink" href="#">
-                                    <img src="https://img.icons8.com/external-flaticons-flat-flat-icons/240/000000/external-books-lifestyles-flaticons-flat-flat-icons-2.png"
-                                    alt="Ubooquity" class="img-responsive">
+                                    <img src="./img/books.png" alt="Ubooquity" class="img-responsive">
                                     <p class="text-center" >Books</p>
                                 </a>
                             </div>
                             <div class="col-md-3">
                                 <a id="Photos_quicklink" href="#">
-                                    <img src="https://img.icons8.com/fluency/240/000000/photos.png"
-                                    alt="Photos" class="img-responsive">
+                                    <img src="./img/photos.png" alt="Photos" class="img-responsive">
                                     <p class="text-center" >Photos</p>
                                 </a>
                             </div>
                             <div class="col-md-3">
                                 <a id="ownCloud_quicklink" href="#">
-                                    <img src="https://img.icons8.com/fluency/240/000000/cloud-backup-restore.png"
-                                    alt="Owncloud" class="img-responsive">
+                                    <img src="./img/cloud-backup.png" alt="ownCloud" class="img-responsive">
                                     <p class="text-center" >Backup</p>
                                 </a>
                             </div>
