--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
 <body>
-    <!-- header with SurServer as name -->
+    <!-- header -->
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -21,7 +21,7 @@
     </div>
     <!-- end of header -->
 
-    <!-- add quick links menu with 4 evenly spaced images side by side, as url for ompd, ubooquity, owncloud and wordpress-->
+    <!-- quick links menu -->
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -64,7 +64,7 @@
     <!-- end of quick links menu -->
 
     <!-- main content -->
-    <!-- this is a dashboard that will show all current services on the server with links to them -->
+    <!-- show all current services status on the server with links to them -->
     <div class="container">
         <!-- start of USER SERVICES -->
         <div class="row">
