--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -14,6 +14,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="page-header">
+                    <img src="./favicon.ico" width="35px" class="pull-left img-responsive">
                     <h1>SurServer <small>Service Control Dashboard</small></h1>
                 </div>
             </div>
@@ -91,7 +92,8 @@
                                                 <!-- this is where the USER services will be listed -->
                                             <tr>
                                                 <!-- O!MPD -->
-                                                <td><a id="OMPD_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=http://ompd.pl"/>
+                                                    <a id="OMPD_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Music Player</td>
                                                 <td id="OMPD_path" >loading</td>
                                                 <td><a id="OMPD_proxy" href="#" >loading</a></td>
@@ -99,7 +101,9 @@
                                             </tr>
                                             <tr>
                                                 <!-- Ubooquity -->
-                                                <td><a id="Ubooquity_link" href="#" class="label label-default">loading</a></td>
+                                            <tr>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=https://vaemendis.net/ubooquity/"/>
+                                                    <a id="Ubooquity_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Book Shelf</td>
                                                 <td id="Ubooquity_path" >loading</td>
                                                 <td><a id="Ubooquity_proxy" href="#" >loading</a></td>
@@ -107,7 +111,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- ownCloud -->
-                                                <td><a id="ownCloud_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=https://owncloud.com/"/>
+                                                    <a id="ownCloud_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Cloud Storage</td>
                                                 <td id="ownCloud_path" >loading</td>
                                                 <td><a id="ownCloud_proxy" href="#" >loading</a></td>
@@ -115,7 +120,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Wordpress -->
-                                                <td><a id="Wordpress_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=https://wordpress.org/"/>
+                                                    <a id="Wordpress_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Portfolio Site</td>
                                                 <td id="Wordpress_path" >loading</td>
                                                 <td><a id="Wordpress_proxy" href="#" >loading</a></td>
@@ -158,7 +164,8 @@
                                                 <!-- this is where the ADMIN services will be listed -->
                                             <tr>
                                                 <!-- Dashboard -->
-                                                <td><a id="Dashboard_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=https://dietpi.com/"/>
+                                                    <a id="Dashboard_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Server Dashboard</td>
                                                 <td id="Dashboard_path" >loading</td>
                                                 <td><a id="Dashboard_proxy" href="#" >loading</a></td>
@@ -166,7 +173,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Pi-Hole -->
-                                                <td><a id="Pi-Hole_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=http://pi-hole.net/"/>
+                                                    <a id="Pi-Hole_link" href="#" class="label label-default">loading</a></td>
                                                 <td>DNS Server</td>
                                                 <td id="Pi-Hole_path" >loading</td>
                                                 <td><a id="Pi-Hole_proxy" href="#" >loading</a></td>
@@ -174,7 +182,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Wordpress Admin -->
-                                                <td><a id="Wordpress-Admin_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=https://wordpress.org/"/>
+                                                    <a id="Wordpress-Admin_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Wordpress Admin</td>
                                                 <td id="Wordpress-Admin_path" >loading</td>
                                                 <td><a id="Wordpress-Admin_proxy" href="#" >loading</a></td>
@@ -182,7 +191,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Ubooquity Admin -->
-                                                <td><a id="Ubooquity-Admin_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=https://vaemendis.net/ubooquity/"/>
+                                                    <a id="Ubooquity-Admin_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Books Library Admin</td>
                                                 <td id="Ubooquity-Admin_path" >loading</td>
                                                 <td><a id="Ubooquity-Admin_proxy" href="#" >loading</a></td>
@@ -190,7 +200,8 @@
                                             </tr>
                                             <!-- <tr>
                                                 Bitwarden
-                                                <td><a id="Bitwarden_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=https://bitwarden.com/"/>
+                                                    <a id="Bitwarden_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Password Manager</td>
                                                 <td id="Bitwarden_path" >loading</td>
                                                 <td><a id="Bitwarden_proxy" href="#" >loading</a></td>
@@ -198,7 +209,8 @@
                                             </tr> -->
                                             <tr>
                                                 <!-- Lidarr -->
-                                                <td><a id="Lidarr_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=https://lidarr.audio/"/>
+                                                    <a id="Lidarr_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Music Library</td>
                                                 <td id="Lidarr_path" >loading</td>
                                                 <td><a id="Lidarr_proxy" href="#" >loading</a></td>
@@ -206,7 +218,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Radarr -->
-                                                <td><a id="Readarr_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=https://readarr.com/"/>
+                                                    <a id="Readarr_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Book Library</td>
                                                 <td id="Readarr_path" >loading</td>
                                                 <td><a id="Readarr_proxy" href="#" >loading</a></td>
@@ -214,7 +227,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Jackett -->
-                                                <td><a id="Jackett_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=https://jackett.io/"/>
+                                                    <a id="Jackett_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Torrent Search Indexer</td>
                                                 <td id="Jackett_path" >loading</td>
                                                 <td><a id="Jackett_proxy" href="#" >loading</a></td>
@@ -222,7 +236,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- phpMyAdmin -->
-                                                <td><a id="phpMyAdmin_link" href="#" class="label label-default">loading</a></td>
+                                                <td><img src="http://www.google.com/s2/favicons?domain=https://phpmyadmin.net/"/>
+                                                    <a id="phpMyAdmin_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Database Admin</td>
                                                 <td id="phpMyAdmin_path" >loading</td>
                                                 <td><a id="phpMyAdmin_proxy" href="#" >loading</a></td>
